changed the skeleton to suit RH Nordics team

--- a/README.md.j2
+++ b/README.md.j2
@@ -1,5 +1,3 @@
-[![Build Status](https://travis-ci.org/oasis-roles/{{ role_name }}.svg?branch=master)](https://travis-ci.org/oasis-roles/{{ role_name }})
-
 {{ role_name }}
 ===========
 
@@ -34,7 +32,7 @@ Example Playbook
 ```yaml
 - hosts: {{ role_name }}-servers
   roles:
-    - role: oasis-roles.{{ role_name }}
+    - role: rhnordics.{{ role_name }}
 ```
 
 License
